cd/kustomize/base/awscli_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: s3-test
spec:
  serviceAccountName: live-eks-sa
  containers:
  - name: awscli
    image: amazon/aws-cli
    command: ["sleep", "3600"]
