cd/kustomize/base/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dummy-nginx
  labels:
    app: dummy-nginx
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
          name: http
