cd/kustomize/base/example_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      containers:
      - name: apple-product-prices # your-container-name (ex:main-app)
        image: 456330605094.dkr.ecr.ap-northeast-2.amazonaws.com/de-mlops/apple-product-prices:latest # your-profile/your-image-name:your-tag (ex:middlek/main-app:latest)
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000 # your-container-port (ex:8001)

---

apiVersion: v1
kind: Service
metadata:
  name: main-app-service
spec:
  selector:
    app: main-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000 # your-container-port (ex:8001)
