cd/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-nginx-service
spec:
  selector:
    app: dummy-nginx
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
