cd/kustomize/base/grafana_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - live-grafana.com
      # secretName: grafana-tls-secret
  rules:
    - # host: live-grafana.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-stack-grafana
                port:
                  number: 3000
